crates/ink/tests/ui/event/fail/signature_missing_value.rs
#[ink::event(signature_topic)]
pub struct Event {
    pub topic: [u8; 32],
}

fn main() {}
